# grant-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  crates.js  docker-compose.yaml  help.html  homebrew.sh  index.html  postgres_setup.sh  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: build-test.yaml  post-release.yaml  release.yaml  rust-clippy.yml
examples/: example.yaml  excluding_table.yaml
grant/: all.html  index.html  sidebar-items.js
grant/apply/: fn.apply.html  fn.apply_all.html  index.html  sidebar-items.js
grant/cli/: enum.Command.html  fn.parse.html  index.html  sidebar-items.js  struct.Cli.html  struct.CustomError.html
grant/config/: index.html  sidebar-items.js
grant/config/config_base/: index.html  sidebar-items.js  struct.Config.html
grant/config/connection/: enum.ConnectionType.html  index.html  sidebar-items.js  (+1 more)
grant/connection/: index.html  sidebar-items.js  struct.DbConnection.html  struct.User.html  struct.UserDatabaseRole.html  struct.UserSchemaRole.html  struct.UserTableRole.html
grant/inspect/: fn.inspect.html  index.html  sidebar-items.js
grant/validate/: fn.validate_file.html  fn.validate_target.html  index.html  sidebar-items.js
implementors/structopt/: trait.StructOpt.js
search.desc/grant/: grant-desc-0-.js
src/: apply.rs  cli.rs  config.rs  connection.rs  gen.rs  inspect.rs  lib.rs  main.rs  util.rs  validate.rs  validator-schema.yaml
src/config/: config.rs  config_base.rs  connection.rs  mod.rs  role.rs  role_database.rs  role_schema.rs  role_table.rs  user.rs
src/grant/: apply.rs.html  cli.rs.html  connection.rs.html  gen.rs.html  inspect.rs.html  lib.rs.html  validate.rs.html
tests/: cli-apply.rs  cli-gen.rs  cli-inspect.rs  cli-validate.rs  cli.rs  test.yaml
trait.impl/structopt/: trait.StructOpt.js
(+59 files in other folders)
