[package]
name = "grant"
version = "0.0.1-beta.1"
edition = "2021"
authors = ["Duyet Le <me@duyet.net>"]
license = "MIT"
description = "Manage database roles and privileges in GitOps style"
readme = "README.md"


[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
indoc = "1.0"
log = "0.4"
env_logger = "0.9"
rand = "0.8"
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ascii_table = "3"
base64 = "0.13"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
