[package]
name = "grant"
version = "0.0.1-beta.4"
edition = "2021"
authors = ["Duyet Le <me@duyet.net>"]
license = "MIT"
description = "Manage Redshift/Postgres privileges in GitOps style"
readme = "README.md"


[dependencies]
structopt = "^0.3.26"
anyhow = "1.0"
indoc = "2.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ascii_table = { version = "4", features = ["auto_table_width", "color_codes"]}
md5 = "0.8"
walkdir = "2"
ansi_term = "0.12"
envmnt = "0.10"
term_size = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"
tempfile = "3"
